--- a/su.html
+++ b/su.html
@@ -1,9 +1,13 @@
 <html>
-  <head></head>
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/ruby-3_2-wasm-wasi@2.1.0/dist/browser.script.iife.js"></script>
+    <script type="text/ruby" src="sudoku.rb"></script>
+  </head>
   <body>
     <div id="sudoku">
       <div id="grid"></div>
       <div id="numbers"></div>
+      <button>gen</button><input type="number" min="10" max="148" value="48"></input>
     </div>
   </body>
   <script>
@@ -12,7 +16,8 @@
       [_, r, c] = e.target.id;
       if (solution[r][c] == sel) {
         e.target.innerText = sel;
-        if (!puzzle.flat().includes(undefined)) {
+        puzzle[r][c] = sel
+        if (!puzzle.flat().includes(0)) {
           document.querySelector("#grid").style.backgroundColor = 'lightgreen';
         }
       }
@@ -41,6 +46,8 @@
     }
     const selectNumber = (e) => {
       sel = e.target.innerText;
+      document.querySelectorAll(".number").forEach((e) => e.style.backgroundColor = 'lightgrey')
+      e.target.style.backgroundColor = 'lightpink';
     };
     const numbers = document.querySelector("#numbers");
     for (let i = 0; i < 9; i++) {
@@ -50,42 +57,27 @@
       num.onclick = selectNumber;
       numbers.appendChild(num);
     }
-    const get_puzzle = () => {
-      let a = [
-        [0, 0, 0, 2, 6, 0, 7, 0, 1],
-        [6, 8, 0, 0, 7, 0, 0, 9, 0],
-        [1, 9, 0, 0, 0, 4, 5, 0, 0],
-        [8, 2, 0, 1, 0, 0, 0, 4, 0],
-        [0, 0, 4, 6, 0, 2, 9, 0, 0],
-        [0, 5, 0, 0, 0, 3, 0, 2, 8],
-        [0, 0, 9, 3, 0, 0, 0, 7, 4],
-        [0, 4, 0, 0, 5, 0, 0, 3, 6],
-        [7, 0, 3, 0, 1, 8, 0, 0, 0],
-      ];
-      return a.map((row) =>
-        row.map((num) => (num == 0 ? undefined : num.toString())),
-      );
-    };
-    const solve = (puzzle) => {
-      return [
-        [4, 3, 5, 2, 6, 9, 7, 8, 1],
-        [6, 8, 2, 5, 7, 1, 4, 9, 3],
-        [1, 9, 7, 8, 3, 4, 5, 6, 2],
-        [8, 2, 6, 1, 9, 5, 3, 4, 7],
-        [3, 7, 4, 6, 8, 2, 9, 1, 5],
-        [9, 5, 1, 7, 4, 3, 6, 2, 8],
-        [5, 1, 9, 3, 2, 6, 8, 7, 4],
-        [2, 4, 8, 9, 5, 7, 1, 3, 6],
-        [7, 6, 3, 4, 1, 8, 2, 5, 9],
-      ];
-    };
-    puzzle = get_puzzle();
-    solution = solve(puzzle);
-    puzzle.forEach((row, r) => {
-      row.forEach((num, c) => {
-        document.querySelector(`#c${r}${c}`).innerText = num ?? "";
+
+    const draw = (gen) => {
+      document.querySelector("#grid").style.backgroundColor = 'lightgrey';
+      window.puzzle = gen.puzzle
+      window.solution = gen.solution
+      puzzle.forEach((row, r) => {
+        row.forEach((num, c) => {
+          document.querySelector(`#c${r}${c}`).innerText = num == 0 ? "" : num;
+        });
       });
-    });
+    }
+  </script>
+  <script type="text/ruby">
+    require 'json'
+    require "js"
+    document = JS.global[:document]
+    document.querySelector("button").addEventListener "click" do |e|
+      diff = JS::eval('return document.querySelector("input").value').to_i
+      str = gen(diff).to_json
+      JS::eval("draw(#{str})")
+    end
   </script>
   <style>
     body {
