--- a/html/index.html
+++ b/html/index.html
@@ -83,7 +83,7 @@
         <div id="controls">
           <div><input name="diff" value="easy" type="radio">easy</input></div>
           <div><input name="diff" value="medium" type="radio" checked>medium</input></div>
-          <div><input name="diff" value="hard" type="radio">good luck</input></div>
+          <div><input name="diff" value="hard" type="radio">hard</input></div>
           <button id="new">new game</button>
         </div>
       </div>
